# aqua-matrix-connector

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md
.claude/skills/: claude-bridge  claude-channel  consultant-deploy
.claude/skills/matrix-message/: skill.md
Skills/claude-bridge/: skill.md
Skills/claude-channel/: skill.md
Skills/consultant-deploy/: SKILL.md  consultant-config.template.json  consultant-persona.py  consultants.registry.example  restore-agent-fleet.sh  roll-consultant-fleet.sh  skill.md  spawn-consultant.sh
Skills/e2e-test/: skill.md
Skills/heartbeat/: SKILL.md  skill.md
Skills/matrix-message/: skill.md
crates/aqua-activity-watch/: Cargo.toml
crates/aqua-activity-watch/src/: main.rs
crates/aqua-matrix-agent/: Cargo.toml
crates/aqua-matrix-agent/examples/: chat_e2e_driver.rs  invite_probe.rs
crates/aqua-matrix-agent/src/: call.rs  durable.rs  lib.rs  main.rs  media.rs  recovery.rs  rtc_keys.rs
crates/aqua-matrix-agent/tests/: e2e.rs
crates/aqua-matrix-ask-mcp/: Cargo.toml
crates/aqua-matrix-ask-mcp/src/: ipc.rs  jsonrpc.rs  lib.rs  main.rs
crates/aqua-matrix-claude-p/: Cargo.toml
crates/aqua-matrix-claude-p/src/: ask_bridge.rs  main.rs
crates/aqua-matrix-gating/: Cargo.toml
crates/aqua-matrix-gating/src/: ask_bridge.rs  destructive.rs  lib.rs  md_bridge.rs  pending.rs
crates/aqua-matrix-heartbeat/: Cargo.toml
crates/aqua-matrix-heartbeat/src/: main.rs  ops.rs  orchestrator.rs
crates/aqua-matrix-md-mcp/: Cargo.toml
crates/aqua-matrix-md-mcp/src/: ipc.rs  jsonrpc.rs  lib.rs  main.rs
crates/aqua-matrix-orchestrator/: Cargo.toml
crates/aqua-matrix-orchestrator/src/: lib.rs
crates/aqua-matrix-relay/examples/: echo_agent.rs  media_agent.rs
crates/aqua-matrix-relay/src/: lib.rs  media.rs
crates/aqua-matrix-template/: Cargo.toml
crates/aqua-matrix-template/src/: lib.rs
docs/: ARCHITECTURE.md  RECOVERY.md  REFERENCE.md
docs/plans/: 2026-06-04-rich-media.md  2026-06-04-webrtc-deepgram-call-agent.md  2026-06-05-call-media-interop.md  chat-confirmations-e2e-handover.md  chat-confirmations.md  repo-split-execution-handover.md  repo-split-progress.md  typed-agent-instances.md
docs/superpowers/plans/: 2026-06-14-streaming-edit-rollover-AUDIT.md  2026-06-14-streaming-edit-rollover.md  2026-06-15-agent-avatars.md  2026-06-15-delivery-inbox-promise-AUDIT.md  2026-06-15-delivery-inbox-promise.md
instances/: claude-channel-1.toml.example
scripts/: build-image.sh  check-dep-direction.sh
src/: claude_channel.rs  heartbeat.rs  lib.rs  main.rs  recovery.rs  registry.rs
systemd/: aqua-agent-fleet-restore.service  aqua-matrix-claude-channel.service  aqua-matrix-heartbeat.service  claude-bridge.service
tests/: e2e.rs
types/: aqua-consultant.json  claude-channel.json
