[workspace]
resolver = "2"
members = [
    "crates/aqua-matrix-agent",
    "crates/aqua-matrix-relay",
    "crates/aqua-matrix-ask-mcp",
    "crates/aqua-matrix-gating",
    "crates/aqua-matrix-orchestrator",
    "crates/aqua-activity-watch",
]

# Shared metadata for every crate in the workspace. Members opt in with
# `version.workspace = true` etc.
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/inblockio/aqua-matrix-agent"

# Single source of truth for dependency versions. Path deps here resolve
# relative to THIS file (the workspace root), so the siwx-oidc sibling keeps
# its short `../siwx-oidc/...` path regardless of how deep a member crate is.
[workspace.dependencies]
aqua-matrix-agent = { path = "crates/aqua-matrix-agent" }
aqua-matrix-relay = { path = "crates/aqua-matrix-relay" }
aqua-matrix-ask-mcp = { path = "crates/aqua-matrix-ask-mcp" }
aqua-matrix-gating = { path = "crates/aqua-matrix-gating" }
aqua-matrix-orchestrator = { path = "crates/aqua-matrix-orchestrator" }

siwx-oidc-auth = { path = "../siwx-oidc/siwx-oidc-auth" }
matrix-sdk = { version = "0.17", features = ["markdown"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Same bollard version as ../agent-customer-portal (the reference ContainerManager).
bollard = "0.18"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
schemars = "1"
# Rich-media support (attachments/voice). `mime` matches matrix-sdk's re-exported
# version (its `send_attachment` takes a `&mime::Mime`); `mime_guess` maps a
# filename → content-type; `imagesize` reads image width/height from the header
# bytes WITHOUT a full decode (so the connector stays light — no `image` crate).
mime = "0.3"
mime_guess = "2"
imagesize = "0.13"
