[package]
name = "aqua-matrix-agent"
version.workspace = true
edition.workspace = true
description = "Matrix agent library and CLI for the Aqua Protocol, using siwx-oidc DID authentication"
license.workspace = true
repository.workspace = true

[lib]
name = "aqua_matrix_agent"

[[bin]]
name = "aqua-matrix-agent"
path = "src/main.rs"

[features]
e2e = ["dep:uuid"]

[dependencies]
uuid = { workspace = true, optional = true }

siwx-oidc-auth.workspace = true
matrix-sdk.workspace = true
# Only for `CollectStrategy`, which matrix-sdk takes but does not re-export
# (see workspace Cargo.toml). Used by the call-media-key transport (rtc_keys.rs).
matrix-sdk-base.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sha2.workspace = true
hex.workspace = true
clap.workspace = true
toml.workspace = true
dotenvy.workspace = true
mime.workspace = true
mime_guess.workspace = true
imagesize.workspace = true
