[package]
name = "aqua-matrix-ask-mcp"
version.workspace = true
edition.workspace = true
description = "Tiny stdio MCP server exposing one tool, `ask_human(question) -> answer`, that bridges the question over a per-run unix socket to the daemon (which owns the Matrix session). Phase B of chat-confirmations. The library half (`ipc`, `jsonrpc`) is reused by the daemon."
license.workspace = true
repository.workspace = true

[lib]
name = "aqua_matrix_ask_mcp"
path = "src/lib.rs"

[[bin]]
name = "aqua-matrix-ask-mcp"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
