[package]
name = "aqua-matrix-claude-p"
version.workspace = true
edition.workspace = true
description = "Reference example agent backend: forwards each inbound DM to `claude -p <prompt>` and replies with stdout. A placeholder that validates the message bridge — swap in any backend by implementing MessageHandler."
license.workspace = true
repository.workspace = true

[[bin]]
name = "aqua-matrix-claude-p"
path = "src/main.rs"

[dependencies]
aqua-matrix-relay.workspace = true
# Phase B: reuse the shared IPC wire types (`ipc::AskReply`, `SOCK_ENV`) so the
# daemon's ask-bridge and the MCP server agree on exactly one wire definition.
aqua-matrix-ask-mcp.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
uuid.workspace = true
