[package]
name = "aqua-matrix-claude-p"
version.workspace = true
edition.workspace = true
description = "Reference example agent backend: forwards each inbound DM to `claude -p <prompt>` and replies with stdout. A placeholder that validates the message bridge — swap in any backend by implementing MessageHandler."
license.workspace = true
repository.workspace = true

[[bin]]
name = "aqua-matrix-claude-p"
path = "src/main.rs"

[dependencies]
aqua-matrix-relay.workspace = true
# The connector-side confirmation/gating substrate: PendingMap (ask_user
# router), the destructive matcher, the ask_human bridge, and the shared ASK_*
# consts. Extracted from this crate; `aqua-matrix-ask-mcp` + `uuid` moved with it.
aqua-matrix-gating.workspace = true
# Phase 4: the typed-instance data model. When a `/agent/config.json` is mounted
# (containerized deployment), the handler reads its role/display/hello/contract/
# memory from a `ResolvedInstance` instead of the hardcoded consts.
aqua-matrix-template.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
