[package]
name = "aqua-matrix-orchestrator"
version.workspace = true
edition.workspace = true
description = "Connector-side container orchestration substrate: drives rootless Podman (via bollard) to spawn / replace / stop / tail typed agent containers and harvest their logs host-side. Transport-agnostic; reused by any backend daemon."
license.workspace = true
repository.workspace = true

[lib]
name = "aqua_matrix_orchestrator"
path = "src/lib.rs"

[dependencies]
# Same bollard version as the reference ContainerManager.
bollard.workspace = true
futures-util.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
